[package]
name = "jsonpath_lib"
version = "0.2.5"
authors = ["Changseok Han <freestrings@gmail.com>"]

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "lua", "query"]
categories = ['wasm', "parser-implementations", "api-bindings"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.2.5/jsonpath_lib"
license = "MIT"

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[dependencies]
# log = "0.4"
# env_logger = "0.7"
# serde = { version = "1.0", features = ["derive"] }
serde = { version = "1.0.100", default-features = false, package = "alt_serde" }
serde_json = {git = "https://github.com/nikvolf/json", default-features = false, features = ["alloc"]}
array_tool = "1.0.3"

[lib]
name = "jsonpath_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

#[profile.release]
#debug = true
#lto = false